--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ h1 {
   font-family: 'Lexend', sans-serif;
 }
 
-#button {
+.entrada a {
   color: #E6C005;
   border: none;
   font-size: 200%;
@@ -25,7 +25,7 @@ h1 {
   background-color: black;
 }
 
-#button:hover {
+.entrada a:hover {
   color: #FCBB08;
 }
 
