Scripts y links para las distintas imágenes añadidos

--- a/css/index.css
+++ b/css/index.css
@@ -50,11 +50,33 @@ h1 {
   margin: 0;
 }
 
-main {}
+main {
+  margin: 5% 10%;
+}
 
-.principal h1 {
-  margin: 6% 0 0;
-  color: black;
+/* Links a las distintas piezas (parecido a map pero es responsive)*/
+button {
+  background-color: rgb(255, 255, 255, 0.5);
+  border: none;
+  position: absolute;
+}
+
+#i {
+  top: 28%;
+  left: 26%;
+  width: 12%;
+  height: 15%;
+}
+
+#ii {
+  top: 37%;
+  left: 67%;
+  width: 17%;
+  height: 14%;
+}
+
+#img01 {
+  display: none;
 }
 
 @media screen and (max-width: 1000px) {
