--- a/css/index.css
+++ b/css/index.css
@@ -15,12 +15,12 @@ body {
   bottom: 0;
   right: 0;
   left: 0;
-  transition: 0.2s;
+  transition: linear 0.3s;
 }
 
 #titulo1 {
   color: white;
-  margin: 25% 0 2%;
+  margin: 22% 0 2%;
   font-size: 350%;
   text-align: center;
   font-family: "century-gothic", sans-serif;
